--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#ffffff</color>
     <color name="colorPrimaryDark">#f3f3f3</color>
     <color name="colorAccent">#2a3a39</color>
+    <color name="colorGreyLight">#9facc0</color>
 </resources>
