Update create task screen.

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:text="My Day"
+        android:text="@string/app_name"
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
         android:textStyle="bold" />
