--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,20 @@
     <color name="colorPrimaryDark">#f3f3f3</color>
     <color name="colorAccent">#2a3a39</color>
     <color name="colorGreyLight">#9facc0</color>
+    <color name="colorRed">#FF5252</color>
+    <color name="colorPink">#FF4081</color>
+    <color name="colorPurple">#E040FB</color>
+    <color name="colorPurpleDeep">#7C4DFF</color>
+    <color name="colorIndigo">#536DFE</color>
+    <color name="colorBlue">#448AFF</color>
+    <color name="colorBlueLight">#40C4FF</color>
+    <color name="colorAqua">#18FFFF</color>
+    <color name="colorTeal">#64FFDA</color>
+    <color name="colorGreen">#69F0AE</color>
+    <color name="colorGreenLight">#B2FF59</color>
+    <color name="colorLime">#EEFF41</color>
+    <color name="colorYellow">#FFFF00</color>
+    <color name="colorAmber">#FFD740</color>
+    <color name="colorOrange">#FFAB40</color>
+    <color name="colorOrangeDeep">#FF6E40</color>
 </resources>
