--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -6,58 +6,66 @@
     android:background="@color/colorPrimary"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/titleView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/new_task"
+        android:textColor="@color/colorAccent"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/titleView"
+        <android.support.design.widget.TextInputLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/new_task"
-            android:textColor="@color/colorAccent"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:layout_weight="1">
+
+            <EditText
+                android:id="@+id/summaryView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:gravity="start"
+                android:hint="@string/summary"
+                android:inputType="textMultiLine"
+                android:maxLines="10"
+                android:padding="8dp"
+                android:textColor="@color/colorGreyLight"
+                android:textColorHint="@color/colorGreyLight"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+        </android.support.design.widget.TextInputLayout>
 
         <CheckBox
             android:id="@+id/favouriteView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
             android:button="@drawable/favourite_check_states" />
 
     </LinearLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp">
-
-        <EditText
-            android:id="@+id/summaryView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:hint="@string/summary"
-            android:inputType="textMultiLine"
-            android:maxLines="3"
-            android:textColor="@color/colorGreyLight"
-            android:textColorHint="@color/colorGreyLight"
-            android:textSize="24sp"
-            android:textStyle="bold" />
-
-    </android.support.design.widget.TextInputLayout>
 
     <TextView
         android:id="@+id/groupTitleView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/group_title_bg"
         android:elevation="3dp"
         android:padding="8dp"
