--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,6 +20,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:layout_marginTop="16dp"
+        android:overScrollMode="never"
+        android:scrollbars="none"
         app:layout_anchor="@+id/titleView"
         app:layout_anchorGravity="bottom" />
 
