--- a/app/src/main/res/layout/fragment_view_group.xml
+++ b/app/src/main/res/layout/fragment_view_group.xml
@@ -24,6 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginStart="16dp" />
+        android:layout_marginStart="16dp"
+        android:overScrollMode="never"
+        android:scrollbars="none" />
 
 </LinearLayout>
