--- a/app/src/main/res/drawable/round_grey.xml
+++ b/app/src/main/res/drawable/round_grey.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
-    <solid android:color="#9facc0" />
+    <solid android:color="#607D8B" />
 </shape>
