--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="4dp"
     android:orientation="horizontal">
 
     <ImageView
@@ -38,6 +39,6 @@
         android:layout_height="24dp"
         android:layout_marginTop="2dp"
         android:visibility="gone"
-        app:srcCompat="@drawable/ic_clear_red" />
+        app:srcCompat="@drawable/ic_garbage_red" />
 
 </LinearLayout>
