--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -9,7 +9,10 @@
         android:id="@+id/titleView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="@string/groups"
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
@@ -19,6 +22,7 @@
         android:id="@+id/tasksList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/titleView"
         android:layout_gravity="bottom"
         android:layout_marginTop="16dp"
         android:overScrollMode="never"
