--- a/app/src/main/res/layout/fragment_add_group.xml
+++ b/app/src/main/res/layout/fragment_add_group.xml
@@ -16,65 +16,47 @@
         android:layout_marginEnd="24dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/new_task"
+        android:text="@string/new_group"
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
         android:textStyle="bold" />
 
-    <LinearLayout
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:layout_marginStart="8dp">
 
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="0dp"
+        <EditText
+            android:id="@+id/nameView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:background="@null"
+            android:gravity="start"
+            android:hint="@string/name"
+            android:imeOptions="actionDone"
+            android:inputType="text"
+            android:maxLength="32"
+            android:maxLines="1"
+            android:padding="8dp"
+            android:textColor="@color/colorGreyLight"
+            android:textColorHint="@color/colorGreyLight"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/summaryView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                android:gravity="start"
-                android:hint="@string/summary"
-                android:inputType="textMultiLine"
-                android:maxLines="10"
-                android:padding="8dp"
-                android:textColor="@color/colorGreyLight"
-                android:textColorHint="@color/colorGreyLight"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+    </android.support.design.widget.TextInputLayout>
 
-        </android.support.design.widget.TextInputLayout>
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <CheckBox
-            android:id="@+id/favouriteView"
+        <LinearLayout
+            android:id="@+id/colorSwitchContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:button="@drawable/favourite_check_states" />
+            android:orientation="horizontal" />
 
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/groupTitleView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/group_title_bg"
-        android:elevation="1dp"
-        android:padding="8dp"
-        android:textAllCaps="true"
-        android:textColor="@color/colorPrimary"
-        android:textStyle="bold"
-        tools:text="Todo" />
+    </HorizontalScrollView>
 
     <LinearLayout
         android:id="@+id/bannerView"
@@ -94,7 +76,7 @@
             android:layout_weight="1"
             android:elevation="1dp"
             android:padding="8dp"
-            android:text="@string/task_automatically_saves_on_exit"
+            android:text="@string/group_automatically_saves_on_exit"
             android:textColor="@color/colorAccent"
             android:textSize="16sp"
             android:textStyle="bold" />
@@ -108,5 +90,4 @@
             app:srcCompat="@drawable/ic_clear_black" />
 
     </LinearLayout>
-
 </LinearLayout>
