--- a/app/src/main/res/drawable/round_green_blue.xml
+++ b/app/src/main/res/drawable/round_green_blue.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@color/colorRed" />
+    <gradient
+        android:angle="270"
+        android:endColor="@color/colorBlue"
+        android:startColor="@color/colorGreen" />
 </shape>
