--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -53,7 +53,7 @@
                     <ImageView
                         android:layout_width="64dp"
                         android:layout_height="64dp"
-                        android:background="@drawable/round_grey"
+                        android:background="@drawable/round_green_blue"
                         android:scaleType="centerInside"
                         app:srcCompat="@drawable/ic_folder_white" />
 
@@ -112,7 +112,7 @@
                     <ImageView
                         android:layout_width="64dp"
                         android:layout_height="64dp"
-                        android:background="@drawable/round_grey"
+                        android:background="@drawable/round_green_blue"
                         android:scaleType="centerInside"
                         app:srcCompat="@drawable/ic_font_size_white" />
 
@@ -209,7 +209,7 @@
                     <ImageView
                         android:layout_width="64dp"
                         android:layout_height="64dp"
-                        android:background="@drawable/round_grey"
+                        android:background="@drawable/round_green_blue"
                         android:scaleType="centerInside"
                         app:srcCompat="@drawable/ic_info_white" />
 
