Increase click area for check mark. New release apk.

--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -9,8 +9,9 @@
 
     <ImageView
         android:id="@+id/statusView"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:padding="4dp"
         app:srcCompat="@drawable/ic_status_check" />
 
     <TextView
